# ulocator

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile
examples/: CMakeLists.txt  main.cpp
include/ulocator/: servicelocator.h
tests/: CMakeLists.txt  ulocator_test.cpp
